test/errors/parsing/blockSize.1.good
blockSize.chpl:2: error: statement does not support the @gpu.blockSize attribute
blockSize.chpl:4: error: fields do not support the @gpu.blockSize attribute
blockSize.chpl:8: error: functions do not currently support the @gpu.blockSize attribute
